fix: change filters bock scroll bar
since the filters block aside scroll bar was different from main one change styles of the scrollbar parent

--- a/src/components/ProductControls/FiltersBlock/FiltersBlock.module.css
+++ b/src/components/ProductControls/FiltersBlock/FiltersBlock.module.css
@@ -22,6 +22,7 @@
 
 .filters-content {
   overflow: auto;
+  scrollbar-width: var(--scrollbar-width);
 }
 
 .close-button {
